--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -59,7 +59,7 @@
         </header>
 
         <div class="col-sm-12">
-            <h2 id="#rep-proto-perf">Protocol Performance Reports</h2>
+            <h2 id="#rep-proto-perf">Test Summary</h2>
 
             <div class="row toolbar-pf-results">
                 <div class="col-sm-9">
@@ -75,201 +75,221 @@
                 </div>
             </div>
 
-            <table class="table table-striped table-bordered table-hover" id="summary-table">
-                <thead>
-                    <tr>
-                        <th>Parameter</th>
-                        <th>Value</th>
-                    </tr>
-                </thead>
+            <div class="col-md-8 col-lg-12">
+                <div class="row">
+                    <div>
+                        <table class="table table-striped table-bordered table-hover" id="summary-table">
+                            <thead>
+                                <tr>
+                                    <th>Parameter</th>
+                                    <th>Value</th>
+                                </tr>
+                            </thead>
 
-                <tbody>
-                    {% if nodeType == "inspector" %}
-                    <tr>
-                        <td>Messaging System</td>
-                        <td>{{ productName }} {{ productVersion }}</td>
-                    </tr>
-                    <tr>
-                        <td>System Report</td>
-                        <td>{{ jvmName }} {{ jvmVersion }} - {{ jvmPackageVersion }}</td>
-                    </tr>
-                    <tr>
-                        <td>Operating System</td>
-                        <td>{{ operatingSystemName }} - {{ operatingSystemVersion }}</td>
-                    </tr>
+                            <tbody>
+                                {% if nodeType == "inspector" %}
+                                <tr>
+                                    <td>Messaging System</td>
+                                    <td>{{ productName }} {{ productVersion }}</td>
+                                </tr>
+                                <tr>
+                                    <td>System Report</td>
+                                    <td>{{ jvmName }} {{ jvmVersion }} - {{ jvmPackageVersion }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Operating System</td>
+                                    <td>{{ operatingSystemName }} - {{ operatingSystemVersion }}</td>
+                                </tr>
+                                {% endif %}
+                                <tr>
+                                    <td>Message Size</td>
+                                    <td>{{ messageSize }} bytes {% if variableSize == 1 %} (+/- 5% variation) {% endif %} </td>
+                                </tr>
+                                <tr>
+                                    <td>Messaging Protocol</td>
+                                    <td>{{ protocol | default('AMQP') }} </td>
+                                </tr>
+                                <tr>
+                                    <td>API Name</td>
+                                    <td>{{ apiName }} </td>
+                                </tr>
+                                <tr>
+                                    <td>API Version</td>
+                                    <td>{{ apiVersion }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Test Duration</td>
+                                    <td>{{ duration }} seconds</td>
+                                </tr>
+                                <tr>
+                                    <td>Concurrent Connections</td>
+                                    <td>{{ parallelCount }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Limit Destinations</td>
+                                    <td>{{ limitDestinations | default('1') }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                {% if nodeType == "receiver" %}
+                <div class="row">
+                    <div>
+                        <h2 id="all-per">Latency: all data range</h2>
+
+
+                        {% set rcvLatFilename = nodeType + "d-latency_all.png" %}
+                        {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
+
+                        {% if rcvLatFilenameExists %}
+                        <img class="img-responsive" src="{{rcvLatFilename}}" />
+                        {% else %}
+                        <div class="alert alert-danger">
+                            <span class="pficon pficon-error-circle-o"></span>
+                            <strong>Error:</strong> the plotted report file for this connection is missing. This is
+                            likely caused due to an error on the load generator backend.
+                        </div>
+                        {% endif %}
+
+
+                    </div>
+                    <div>
+                        <h2 id="90th-per">Latency: 90ᵗʰ percentile</h2>
+
+                        {% set rcvLatFilename = nodeType + "d-latency_90.png" %}
+                        {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
+
+                        {% if rcvLatFilenameExists %}
+
+                        <img class="img-responsive" src="{{rcvLatFilename}}" />
+                        {% else %}
+                        <div class="alert alert-danger">
+                            <span class="pficon pficon-error-circle-o"></span>
+                            <strong>Error:</strong> the plotted report file for this connection is missing. This is
+                            likely caused due to an error on the load generator backend.
+                        </div>
+                        {% endif %}
+
+                    </div>
+                    <div>
+                        <h2 id="99th-per">Latency: 99ᵗʰ percentile</h2>
+                        {% set rcvLatFilename = nodeType + "d-latency_99.png" %}
+                        {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
+
+                        {% if rcvLatFilenameExists %}
+
+                        <img class="img-responsive" src="{{rcvLatFilename}}"  />
+                        {% else %}
+                        <div class="alert alert-danger">
+                            <span class="pficon pficon-error-circle-o"></span>
+                            <strong>Error:</strong> the plotted report file for this connection is missing. This is
+                            likely caused due to an error on the load generator backend.
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+                {% endif %}
+
+                {% if nodeType == "receiver" or nodeType == "sender" %}
+
+                <div class="row">
+                    <div>
+                        <h2 id="rate">Rate</h2>
+                        {% set rcvRateFilename = nodeType + "d-rate_rate.png" %}
+                        {% set rcvRateFilenameExists = rcvRateFilename|fe(reportDirInfo.reportDir) %}
+
+                        {% if rcvRateFilenameExists %}
+
+                        <table class="table table-striped table-bordered table-hover" id="latency-table">
+                            <thead>
+                                <tr>
+                                    <th>Rate Metric</th>
+                                    <th>Value</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Maximum Rate</td>
+                                    <td>{{ rateMax }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Minimum Rate</td>
+                                    <td>{{ rateMin }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Rate Samples</td>
+                                    <td>{{ rateSamples }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Geometric Mean</td>
+                                    <td>{{ rateGeometricMean }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Standard Deviation</td>
+                                    <td>{{ rateStandardDeviation }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Rate Error Count</td>
+                                    <td>{{ rateErrorCount }}</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Skipped Rate Records</td>
+                                    <td>{{ rateSkipCount }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <img class="img-responsive" src="{{rcvRateFilename}}" />
+                    </div>
+
+                    {% else %}
+                    <div class="alert alert-danger">
+                        <span class="pficon pficon-error-circle-o"></span>
+                        <strong>Error:</strong> the plotted report file for this connection is missing. This is
+                        likely caused due to an error on the load generator backend.
+                    </div>
                     {% endif %}
-                    <tr>
-                        <td>Message Size</td>
-                        <td>{{ messageSize }} bytes {% if variableSize == 1 %} (+/- 5% variation) {% endif %} </td>
-                    </tr>
-                    <tr>
-                        <td>Messaging Protocol</td>
-                        <td>{{ protocol | default('AMQP') }} </td>
-                    </tr>
-                    <tr>
-                        <td>API Name</td>
-                        <td>{{ apiName }} </td>
-                    </tr>
-                    <tr>
-                        <td>API Version</td>
-                        <td>{{ apiVersion }}</td>
-                    </tr>
-                    <tr>
-                        <td>Test Duration</td>
-                        <td>{{ duration }} seconds</td>
-                    </tr>
-                    <tr>
-                        <td>Concurrent Connections</td>
-                        <td>{{ parallelCount }}</td>
-                    </tr>
-                    <tr>
-                        <td>Limit Destinations</td>
-                        <td>{{ limitDestinations | default('1') }}</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            {% if nodeType == "receiver" %}
-            <div>
-                <h2 id="all-per">Latency: all data range</h2>
-
-
-                {% set rcvLatFilename = nodeType + "d-latency_all.png" %}
-                {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
-
-                {% if rcvLatFilenameExists %}
-                <img src="{{rcvLatFilename}}" />
-                {% else %}
-                <p><b>Error:</b> the plotted report file for this connection is missing. This
-                    is likely caused due to an error on the load generator backend</p>
+                </div>
                 {% endif %}
 
-
-            </div>
-            <div>
-                <h2 id="90th-per">Latency: 90ᵗʰ percentile</h2>
-
-                {% set rcvLatFilename = nodeType + "d-latency_90.png" %}
-                {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
-
-                {% if rcvLatFilenameExists %}
-
-                <img src="{{rcvLatFilename}}" />
-                {% else %}
-
-                <p><b>Error:</b> the plotted report file for this connection is missing. This
-                    is likely caused due to an error on the load generator backend</p>
-                {% endif %}
-
-            </div>
-            <div>
-                <h2 id="99th-per">Latency: 99ᵗʰ percentile</h2>
-                {% set rcvLatFilename = nodeType + "d-latency_99.png" %}
-                {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
-
-                {% if rcvLatFilenameExists %}
-
-                <img src="{{rcvLatFilename}}"  />
-                {% else %}
-
-                <p><b>Error:</b> the plotted report file for this connection is missing. This
-                    is likely caused due to an error on the load generator backend</p>
-                {% endif %}
-            </div>
-            {% endif %}
-            {% if nodeType == "receiver" or nodeType == "sender" %}
-            <div>
-                <h2 id="rate">Rate</h2>
-                {% set rcvRateFilename = nodeType + "d-rate_rate.png" %}
-                {% set rcvRateFilenameExists = rcvRateFilename|fe(reportDirInfo.reportDir) %}
-
-                {% if rcvRateFilenameExists %}
-
-                <img src="{{rcvRateFilename}}" />
-
-                <h3 id="rate-metrics">Rate Metrics</h3>
-                <table class="table table-striped table-bordered table-hover" id="latency-table">
-                    <thead>
-                        <tr>
-                            <th>Rate Metric</th>
-                            <th>Value</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Maximum Rate</td>
-                            <td>{{ rateMax }}</td>
-                        </tr>
-                        <tr>
-                            <td>Minimum Rate</td>
-                            <td>{{ rateMin }}</td>
-                        </tr>
-                        <tr>
-                            <td>Rate Samples</td>
-                            <td>{{ rateSamples }}</td>
-                        </tr>
-                        <tr>
-                            <td>Geometric Mean</td>
-                            <td>{{ rateGeometricMean }}</td>
-                        </tr>
-                        <tr>
-                            <td>Standard Deviation</td>
-                            <td>{{ rateStandardDeviation }}</td>
-                        </tr>
-                        <tr>
-                            <td>Rate Error Count</td>
-                            <td>{{ rateErrorCount }}</td>
-                        </tr>
-
-                        <tr>
-                            <td>Skipped Rate Records</td>
-                            <td>{{ rateSkipCount }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-                {% else %}
-
-                <p><b>Error:</b> the plotted report file for this connection is missing. This
-                    is likely caused due to an error on the load generator backend</p>
+                {% if nodeType == "inspector" %}
+                <div class="row">
+                    <div>
+                        <h2 id="queue-size">Broker Queue Size</h2>
+                        <p></p>
+                        <img class="img-responsive" src="broker-jvm-{{nodeType}}_queue_data.png"  />
+                    </div>
+                    <div>
+                        <h2 id="system-memory">System Memory</h2>
+                        <p></p>
+                        <img class="img-responsive" src="broker-jvm-{{nodeType}}_memory.png"  />
+                    </div>
+                    <div>
+                        <h2 id="eden-memory">Eden Memory</h2>
+                        <p></p>
+                        <img class="img-responsive" src="broker-jvm-{{nodeType}}_eden_memory.png"  />
+                    </div>
+                    <div>
+                        <h2 id="tenured-memory">Tenured Memory</h2>
+                        <p></p>
+                        <img src="broker-jvm-{{nodeType}}_tenured_memory.png"  />
+                    </div>
+                    <div>
+                        <h2 id="survivor-memory">Survivor Memory</h2>
+                        <p></p>
+                        <img class="img-responsive" src="broker-jvm-{{nodeType}}_survivor_memory.png"  />
+                    </div>
+                    <div>
+                        <h2 id="pm-memory">Permgen/Metaspace Memory</h2>
+                        <p></p>
+                        <img class="img-responsive" src="broker-jvm-{{nodeType}}_pm_memory.png"  />
+                    </div>
+                </div>
                 {% endif %}
             </div>
-
-            {% endif %}
-
-            {% if nodeType == "inspector" %}
-            <div>
-                <h2 id="queue-size">Broker Queue Size</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_queue_data.png"  />
-            </div>
-            <div>
-                <h2 id="system-memory">System Memory</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_memory.png"  />
-            </div>
-            <div>
-                <h2 id="eden-memory">Eden Memory</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_eden_memory.png"  />
-            </div>
-            <div>
-                <h2 id="tenured-memory">Tenured Memory</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_tenured_memory.png"  />
-            </div>
-            <div>
-                <h2 id="survivor-memory">Survivor Memory</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_survivor_memory.png"  />
-            </div>
-            <div>
-                <h2 id="pm-memory">Permgen/Metaspace Memory</h2>
-                <p></p>
-                <img src="broker-jvm-{{nodeType}}_pm_memory.png"  />
-            </div>
-            {% endif %}
-
         </div>
 
     </main>
