--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -49,6 +49,35 @@
             <li>
                 <a href="#0">Test Run Index</a>
             </li>
+            <li>
+                <a href="#test-summary">Test Summary</a>
+            </li>
+            {% if nodeType == "receiver" %}
+            <li>
+                <a href="#lat-all-summary">Latency Summary</a>
+            </li>
+            <li>
+                <a href="#lat-all-range">Latency: Full Data Set</a>
+            </li>
+            <li>
+                <a href="#90th-per">Latency: 90ᵗʰ percentile</a>
+            </li>
+            <li>
+                <a href="#99th-per">Latency: 99ᵗʰ percentile</a>
+            </li>
+            {% endif %}
+
+            {% if nodeType == "receiver" or nodeType == "sender" %}
+            <li>
+                <a href="#rate">Rate</a>
+            </li>
+            {% endif %}
+
+            {% if nodeType == "inspector" %}
+            <li>
+                <a href="#queue-size">Inspector</a>
+            </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
@@ -59,7 +88,7 @@
         </header>
 
         <div class="col-sm-12">
-            <h2 id="#rep-proto-perf">Test Summary</h2>
+            <h2 id="#test-summary">Test Summary</h2>
 
             <div class="row toolbar-pf-results">
                 <div class="col-sm-9">
@@ -136,8 +165,60 @@
 
                 {% if nodeType == "receiver" %}
                 <div class="row">
+                    <h2 id="lat-all-summary">Latency: summary</h2>
+                    <table class="table table-striped table-bordered table-hover" id="latency-summary-table">
+                        <thead>
+                            <tr>
+                                <th>Metric</th>
+                                <th>Value</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Total Count </td>
+                                <td>{{ latencyTotalCount | round(0) }}</td>
+                            </tr>
+                            <tr>
+                                <td>Max Latency</td>
+                                <td>{{ latencyMaxValue | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>Mean Latency</td>
+                                <td>{{ latencyMean | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>Standard Deviation</td>
+                                <td>{{ latencyStdDeviation | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>99.99th Percentile</td>
+                                <td>{{ latency9999th | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>99.9th Percentile</td>
+                                <td>{{ latency999th | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>99th Percentile</td>
+                                <td>{{ latency99th | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>95th Percentile</td>
+                                <td>{{ latency95th | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>90th Percentile</td>
+                                <td>{{ latency90th | round(6) }}</td>
+                            </tr>
+                            <tr>
+                                <td>50th Percentile</td>
+                                <td>{{ latency50th | round(6) }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                     <div>
-                        <h2 id="all-per">Latency: all data range</h2>
+                        <h2 id="lat-all-range">Latency: full data set</h2>
 
 
                         {% set rcvLatFilename = nodeType + "d-latency_all.png" %}
@@ -205,34 +286,34 @@
                         <table class="table table-striped table-bordered table-hover" id="latency-table">
                             <thead>
                                 <tr>
-                                    <th>Rate Metric</th>
+                                    <th>Metric</th>
                                     <th>Value</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>Maximum Rate</td>
-                                    <td>{{ rateMax }}</td>
+                                    <td>{{ rateMax | round(6) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Minimum Rate</td>
-                                    <td>{{ rateMin }}</td>
+                                    <td>{{ rateMin | round(6) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Rate Samples</td>
-                                    <td>{{ rateSamples }}</td>
+                                    <td>{{ rateSamples | round(0) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Geometric Mean</td>
-                                    <td>{{ rateGeometricMean }}</td>
+                                    <td>{{ rateGeometricMean | round(6) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Standard Deviation</td>
-                                    <td>{{ rateStandardDeviation }}</td>
+                                    <td>{{ rateStandardDeviation | round(6) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Rate Error Count</td>
-                                    <td>{{ rateErrorCount }}</td>
+                                    <td>{{ rateErrorCount}}</td>
                                 </tr>
 
                                 <tr>
