--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-main.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-main.html
@@ -32,26 +32,26 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-pf" role="navigation">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">
-            <img src="resources/img/brand.svg" alt="Maestro - Messaging Performance Reports" />
-        </a>
-    </div>
-    <div class="collapse navbar-collapse navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-primary">
-            <li>
-                <a href="#0">Test Run Index</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-default navbar-pf" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://github.com/maestro-performance/maestro-java">
+                <img src="resources/img/brand.svg" alt="Maestro - Messaging Performance Reports" />
+            </a>
+        </div>
+        <div class="collapse navbar-collapse navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-primary">
+                <li>
+                    <a href="#0">Test Run Index</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <main>
         <header>
@@ -59,7 +59,7 @@
         </header>
 
         <div class="col-sm-12">
-            <h2 id="#rep-proto-perf">Protocol Performance Reports</h2>
+            <h2 id="#rep-proto-perf">Test Run Index</h2>
 
             <div class="row toolbar-pf-results">
                 <div class="col-sm-9">
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <table class="table table-striped table-bordered table-hover" id="rtable">
+            <table class="table table-striped table-bordered table-hover" id="idxtable">
                 <thead>
                 <tr>
                     <th>Test Number</th>
