UPD: to remove another redundancy

--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -310,7 +310,7 @@
                             </tbody>
                         </table>
 
-                        <h3 id="rate-distribution">Rate Distribution Over Time</h3>
+                        <h3 id="rate-distribution">Distribution Over Time</h3>
                         <img class="img-responsive" src="{{rcvRateFilename}}" />
                     </div>
 
