FIX: incorrect branch image reference

--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -41,7 +41,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="http://github.com/maestro-performance/maestro-java">
-                <img src="resources/img/brand.svg" alt="Maestro - Messaging Performance Reports" />
+                <img src="../../../../resources/img/brand.svg" alt="Maestro - Messaging Performance Reports" />
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-collapse-1">
