FIX: incorrect name for the queues report

--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -358,7 +358,7 @@
 
                 {% if nodeType == "inspector" %}
                 <div class="row">
-                    {% set queueFileName = "queue.png" %}
+                    {% set queueFileName = "queues.png" %}
                     {% set queueFileNameExists = queueFileName|fe(reportDirInfo.reportDir) %}
 
                     {% if queueFileNameExists %}
