FIX: incorrect file name for the all range of the latency data

--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -153,7 +153,7 @@
                         <h3 id="lat-all-range">Percentile Distribution</h3>
 
 
-                        {% set rcvLatFilename = "rate.png" %}
+                        {% set rcvLatFilename = nodeType + "d-latency_all.png" %}
                         {% set rcvLatFilenameExists = rcvLatFilename|fe(reportDirInfo.reportDir) %}
 
                         {% if rcvLatFilenameExists %}
